Fix canonical URL redirects for HTTP/HTTPS and www variants
- Add Express middleware to redirect HTTP → HTTPS
- Add Express middleware to redirect www → non-www
- Add Vercel redirects configuration for platform-level redirects
- Add canonical URL meta tag to HTML
- Canonical domain: https://thejobbridge-inc.com (non-www, HTTPS)
- Fixes SEO issue with protocol/www variants not redirecting

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
     <meta property="og:title" content="The Job Bridge - Empowering Careers for All" />
     <meta property="og:description" content="AI-powered job matching, resume building, and interview preparation designed for accessibility." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://thejobbridge-inc.com" />
+    <link rel="canonical" href="https://thejobbridge-inc.com" />
     <title>The Job Bridge - AI-Powered Employment for People with Disabilities</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
     <!-- OTTO Pixel installation script -->
